Customize Indigo theme for ryandaigle.com

--- a/_sass/pages/list-pages.sass
+++ b/_sass/pages/list-pages.sass
@@ -1,6 +1,8 @@
 .home,
 .blog,
-.projects
+.projects,
+.talks,
+.publications
     margin-top: 125px
 
     > .list
@@ -25,7 +27,9 @@
 
 .home > .list,
 .blog > .list,
-.projects > .list
+.projects > .list,
+.talks > .list,
+.publications > .list
     > .item
         display: block
         width: 95%
@@ -63,7 +67,9 @@
         color: $alpha
 
 .blog > .list > .item > .url,
-.projects > .list > .item > .url
+.projects > .list > .item > .url,
+.talks > .list > .item > .url,
+.publications > .list > .item > .url
     > .title
         display: inline
 
