--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,23 +1,27 @@
 {% if page.title == "Home"
    or page.title == "Blog"
    or page.title == "Projects"
+   or page.title == "Publications"
+   or page.title == "Talks"
    or page.title == "Tags"
 %}{% assign showHeader = true %}{% endif %}
 
 {% if showHeader == true %}
     <header class="header-home {% if site.animation %}animated{% endif %}">
-        {% if site.about %}
-            <a class="link" href="{{ site.url }}/about">
-                <img class="selfie" alt="{{ site.name }}" src="{% if site.external-image %}{{ site.picture }}{% else %}{{ site.url }}/{{ site.picture }}{% endif %}" />
-            </a>
-        {% else %}
-            <span class="link">
-                <img class="selfie" alt="{{ site.name }}" src="{% if site.external-image %}{{ site.picture }}{% else %}{{ site.url }}/{{ site.picture }}{% endif %}" />
-            </span>
+        {% if false %}
+          {% if site.about %}
+              <a class="link" href="{{ site.url }}/about">
+                  <img class="selfie" alt="{{ site.name }}" src="{% if site.external-image %}{{ site.picture }}{% else %}{{ site.url }}/{{ site.picture }}{% endif %}" />
+              </a>
+          {% else %}
+              <span class="link">
+                  <img class="selfie" alt="{{ site.name }}" src="{% if site.external-image %}{{ site.picture }}{% else %}{{ site.url }}/{{ site.picture }}{% endif %}" />
+              </span>
+          {% endif %}
         {% endif %}
 
         <h1 class="title">{{ site.name }}</h1>
-        <h2 class="description">{{ site.bio }}</h2>
+        <!-- <h2 class="description">{{ site.description }}</h2> -->
 
         {% include social-links.html %}
     </header>
