--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -14,12 +14,22 @@
             {% endif %}
         {% endif %}
 
+        {% if site.publications == true %}
+            <li class="item">
+                <a class="link" href="{{ site.url }}/publications">Publications</a>
+            </li>
+        {% endif %}
+
         {% if site.projects == true %}
-            {% if page.title != "Projects" %}
-                <li class="item">
-                    <a class="link" href="{{ site.url }}/projects">Projects</a>
-                </li>
-            {% endif %}
+            <li class="item">
+                <a class="link" href="{{ site.url }}/projects">Projects</a>
+            </li>
+        {% endif %}
+
+        {% if site.talks == true %}
+            <li class="item">
+                <a class="link" href="{{ site.url }}/talks">Talks</a>
+            </li>
         {% endif %}
 
         {% if site.about == true %}
